# icims_automation

./: .env.example  README.md  core.py  main.py  prompt.py  pyproject.toml  test.py
